--- a/main.css
+++ b/main.css
@@ -31,13 +31,13 @@ html, body {
     cursor: pointer;
     display: inline-block;
     font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
-    font-size: 20px;
+    font-size: 50%;
     font-weight: 800;
     line-height: 16px;
     min-height: 40px;
     outline: 0;
-    width: 15%;
-    height: 10%;
+    width: 13%;
+    height: 5%;
     padding: 12px 14px;
     text-align: center;
     text-rendering: geometricprecision;
@@ -151,7 +151,7 @@ Input {
   margin: 2%;
   padding: var(--inputPaddingV) var(--inputPaddingH);
   color: inherit;
-  width: 20%;
+  width: 15%;
   height: 5%;
   font-family: inherit;
   font-size: var(--inputFontSize);
@@ -179,7 +179,7 @@ Input {
     text-align: center;
     height: 100px;
     display: flex;
-    font-size: 50px;
+    font-size: 100%;
     line-height: 5%;
     font-family: Modak;
     padding-left: 2%;
@@ -190,11 +190,11 @@ Input {
     
   }
   #label{
-    font-size: 40px;
+    font-size: 100%;
     color: #ffffff;
   }
   #status{
-    font-size: 40px;
+    font-size: 100%;
     text-align: center;
     color:#ffffff
   }
