--- a/main.css
+++ b/main.css
@@ -35,6 +35,7 @@ html, body {
     font-weight: 800;
     line-height: 16px;
     min-height: 40px;
+    margin: 1%;
     outline: 0;
     width: 6%;
     height: 3%;
@@ -108,7 +109,7 @@ html {
 }
 
 body {
-  display: inline-flex;
+  display: inline-block;
   align-items: center;
   justify-content: center;
   overflow: hidden;
@@ -145,7 +146,7 @@ Input {
 
 .Input-text {
   display: flex;
-  margin: 2%;
+  margin: 1%;
   padding: var(--inputPaddingV) var(--inputPaddingH);
   color: inherit;
   width: 10%;
@@ -173,7 +174,8 @@ Input {
     
   
   .important-txt{
-    text-align: center;
+    display: inline-block;
+    
     height: 100px;
     display: flex;
     font-size: 100%;
@@ -184,17 +186,19 @@ Input {
     color: rgba(255, 255, 255);
     margin-top: 3%;
     text-shadow: 1px 1px 0px #D2D2D247;
+   
     
   }
   #label{
     display: inline-block;
+    margin: 1%;
     font-size: 80%;
     color: #ffffff;
   }
   
   #status{
     font-size: 80%;
-    text-align: center;
+    
     color:#ffffff
   }
     
